Bug fixes, mostly on mobile

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -99,3 +99,14 @@
 .btn[data-direction="left"].is-open {
   transform: rotateY(-180deg);
 }
+
+@media only screen and (max-width: 600px) {
+  .btn.is-open {
+    width: 300px;
+    height: 200px;
+  }
+
+  .btn-back p {
+    font-size: 0.9rem;
+  }
+}
