--- a/css/styles_1.2.css
+++ b/css/styles_1.2.css
@@ -47,7 +47,6 @@ a {
 
 canvas {
   cursor: pointer;
-  height: 30%;
 }
 
 .main-wrapper {
@@ -63,13 +62,12 @@ canvas {
 }
 
 .frosted {
-  background-color: rgba(197, 218, 250, 0.1);
-  backdrop-filter: blur(3px);
+  background-color: rgba(197, 218, 250, 0.5);
+  backdrop-filter: blur(2px);
   z-index: 1;
   border-radius: 15px 15px;
-  margin:25px;
+  margin: 25px;
 }
-
 
 .headshot {
   margin-top: 5%;
@@ -100,15 +98,12 @@ canvas {
   padding: 10px;
 }
 
-.skills-text {
-  /* margin-bottom: 10%; */
-}
 
 footer {
   display: block;
   position: sticky;
   margin: auto;
-  margin-top: 15%;
+  margin-top: 12%;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -139,7 +134,7 @@ footer {
   }
 
   footer {
-    margin-top: 10%;
+    margin-top: 6%;
   }
 }
 
@@ -159,12 +154,20 @@ footer {
   p {
     font-size: 1.15rem;
   }
+
+  footer {
+    margin-top: 12%;
+  }
 }
 
-@media (max-width:1600px) {
+@media only screen and (min-width: 1101px) and (max-width:1600px) {
   .headshot {
     margin-bottom: 50px;
-    width: 100%;
+    width: 70%;
+  }
+
+  .main-wrapper {
+    width: 65%;
   }
 
   h1 {
@@ -176,11 +179,13 @@ footer {
   }
 
   footer {
-    margin-top: 25%;
+    margin-top: 15%;
+    position: absolute;
+    bottom:0;
   }
 }
 
-@media (max-width:1100px) {
+@media only screen and (min-width: 901px) and (max-width:1100px) {
   .main-wrapper {
     width: 70%;
   }
@@ -201,10 +206,61 @@ footer {
     margin-bottom: 50px;
     width: 100%;
   }
+
+  footer {
+    margin-top: 25%;
+  }
 }
 
-@media (max-width:900px) {
+@media only screen and (min-width: 601px) and (max-width:900px) {
+  .main-wrapper {
+    width: 85%;
+  }
+
   footer {
-    margin-top: 40%;
+    margin-top: 30%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .main-wrapper {
+    width: 100%;
+  }
+
+  .headshot {
+    margin-bottom: 50px;
+    width: 100%;
+  }
+
+  .frosted {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  .main-wrapper {
+    width: 90%;
+  }
+
+
+  footer {
+    margin-top: 70%;
+    height:75px;
+  }
+
+  .footer-text {
+    padding-top: 13px;
+    padding-bottom: 0;
   }
 }
